<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HikeHackathon</string>
    <string name="hello_world">Hi!	</string>
    <string name="gender">Gender: </string>
    <string name="age">Age: </string>
    <string name="interests">Interests: </string>
    <string name="friend">Best Friend: </string>
    <string name="mood">Current Mood: </string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">664615330317757</string>

</resources>
