<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222A35" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hikehackathon.MainActivity" >

    	    
    <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        facebook:confirm_logout="false"
        facebook:fetch_user_info="true" />
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">
			    <TextView
			    	android:id="@+id/name_heading"
			    	android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="#ffffff"
			        android:textSize="23sp"
			        android:text="@string/hello_world"
			     />
			    
			    <TextView
			    	android:id="@+id/user_name"
			    	android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="#ffffff"
			        android:textSize="23sp"
			     />
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
			    <TextView
			    	android:id="@+id/gender_heading"
			    	android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="#ffffff"
			        android:textSize="20sp"
			        android:text="@string/gender"
			     />
			    <TextView
			    	android:id="@+id/user_gender"
			    	android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="#ffffff"
			        android:textSize="18sp"
			     />
    </LinearLayout>

    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
			    <TextView
			    	android:id="@+id/age_heading"
			    	android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="#ffffff"
			        android:textSize="20sp"
			        android:text="@string/age"
			     />
			    <TextView
			    	android:id="@+id/user_age"
			    	android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="#ffffff"
			        android:textSize="18sp"
			     />			    
    </LinearLayout>

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
			     <TextView
			    	android:id="@+id/interests_heading"
			    	android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="#ffffff"
			        android:textSize="20sp"
			        android:text="@string/interests"
			     />
			     <TextView
			    	android:id="@+id/user_interests"
			    	android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="#ffffff"
			        android:textSize="18sp"
			        android:visibility="invisible"
			     />
     </LinearLayout>
    
	 <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">   
			     <TextView
			    	android:id="@+id/friends_heading"
			    	android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="#ffffff"
			        android:textSize="20sp"
			        android:text="@string/friend"
			     />
			     <TextView
			    	android:id="@+id/user_friends"
			    	android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="#ffffff"
			        android:textSize="18sp"
			     />
     </LinearLayout>

	 <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">	 
			     <TextView
			    	android:id="@+id/mood_heading"
			    	android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="#ffffff"
			        android:textSize="20sp"
			        android:text="@string/mood" 
			     />
			     <TextView
			    	android:id="@+id/user_status"
			    	android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="#ffffff"
			        android:textSize="18sp"
			     />
     </LinearLayout>
     
</LinearLayout>
</ScrollView>